--- a/VIC20.qsf
+++ b/VIC20.qsf
@@ -366,7 +366,7 @@ set_global_assignment -name VHDL_FILE fpga64_keyboard.vhd
 set_global_assignment -name VHDL_FILE rc_filter_1o.vhd
 set_global_assignment -name VHDL_FILE c1530.vhd
 set_global_assignment -name VHDL_FILE m6561.vhd
-set_global_assignment -name VHDL_FILE m6522.vhd
+set_global_assignment -name VHDL_FILE via6522.vhd
 set_global_assignment -name VHDL_FILE vic20.vhd
 set_global_assignment -name SYSTEMVERILOG_FILE VIC20.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
